youtube video fix

--- a/detail-page/video-how-to-tune-a-cb-antennae.html
+++ b/detail-page/video-how-to-tune-a-cb-antennae.html
@@ -54,7 +54,8 @@
           <a href="https://www.youtube.com/watch?v&#x3D;0UsOmfVErO8" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v&#x3D;0UsOmfVErO8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <img src="/static/img/guides/bleepinjeepcbtune.png">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed?v&#x3D;0UsOmfVErO8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <p>If your CB radio doesnt have a built-in SWR meter, you'll do the same thing but with an external meter.</p>
         </div>
     </section>
