--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </a>
           </div>
 
-          <div style="" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
             <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -148,24 +148,24 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
-            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
                 </div>
               </div>
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
-            <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Rear e-Brake Retrofit </div>
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </div>
               </div>
@@ -208,25 +208,25 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Ignition Module Testing">
-            <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Ignition Module Testing</div>
-                <div class="card-description"></div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="12" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="11" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Larry Owens</div>
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+            <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Ignition Module Testing</div>
+                <div class="card-description"></div>
                 </div>
               </div>
             </a>
@@ -244,25 +244,25 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-            <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="14" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
             <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
                 <div class="card-author"></div>
                 <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
                 <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="15" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+            <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
                 </div>
               </div>
             </a>
