--- a/detail-page/tube-bending-101.html
+++ b/detail-page/tube-bending-101.html
@@ -22,7 +22,8 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
-
+  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
+  <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
 </head>
 
 <body>
