--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
-
+  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
+  <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
 </head>
 
 <body>
@@ -90,21 +91,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">FozRoamer</div>
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -112,6 +99,20 @@
                 <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
                 <div class="card-title">Tube Bending 101</div>
                 <div class="card-description">pirate4x4 tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">FozRoamer</div>
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -188,21 +189,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="8" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
-
-              <div class="card">
-                <div class="card-id">ej22</div>
-                <div class="card-author"></div>
-                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="9" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="8" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -210,6 +197,20 @@
                 <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
                 <div class="card-title">Fuel Injector Cleaning</div>
                 <div class="card-description">scrub a dub dub</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="9" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+
+              <div class="card">
+                <div class="card-id">ej22</div>
+                <div class="card-author"></div>
+                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -258,21 +259,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="13" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="14" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -280,6 +267,20 @@
                 <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
                 <div class="card-title">DIY: Welded Differential</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
                 </a>
                 </div>
               </div>
