--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
                 <div class="card-id">generic build</div>
-                <div class="card-author">Bleepin Jeep</div>
-                <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
-                <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
+                <div class="card-author">FozRoamer</div>
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -124,13 +124,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
                 <div class="card-id">generic build</div>
-                <div class="card-author">FozRoamer</div>
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-author">Bleepin Jeep</div>
+                <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
+                <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -152,21 +152,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
-
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
-                <div class="card-title">Rear e-Brake Retrofit </div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -174,6 +160,20 @@
                 <a href="./detail-page/dashboard-removal.html"> <div class="item-content">
                 <div class="card-title">Dashboard Removal</div>
                 <div class="card-description">&amp; LED retrofitting</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
+                <div class="card-title">Rear e-Brake Retrofit </div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -264,21 +264,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author"></div>
-                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
-                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="14" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -292,7 +278,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="15" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -300,6 +286,20 @@
                 <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
                 <div class="card-title">Cooler Thermoswitch</div>
                 <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
+                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -348,8 +348,8 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. LiftedSubarus does not warrant the performance, effectiveness or applicability of any sites listed or linked to in any Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
-    <a href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p style="font-size:.5em;color:#bdc3c7">v1-08.11.18-40.51</p>
+    <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
+      <p >v1-08.11.18-43.43</p>
     </a>
   </footer>
 
