--- a/detail-page/bumper-cutting.html
+++ b/detail-page/bumper-cutting.html
@@ -25,8 +25,8 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title"        content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description"  content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title"        content="  Bumper Cutting " />
+  <meta property="og:description"  content="   " />
 
 
 </head>
@@ -55,13 +55,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Bumper Cutting</h1>
+         <p class="details-author">by Joshua Carrion</p>
+          <a href="https://m.imgur.com/a/k516H" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img  src="/static/img/guides/overbiteProject.jpg">
+          <p>Josh took the leap and cut the front bumper of his '16 crosstrek to create a better approach angle.</p>
         </div>
     </section>
 
