--- a/detail-page/cars101-com.html
+++ b/detail-page/cars101-com.html
@@ -25,8 +25,8 @@
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title"        content="  How To Keep Your Subaru Alive " />
-  <meta property="og:description"  content="  This went out of print a long time ago. Luckily for us Joel Grice digitized it for us! " />
+  <meta property="og:title"        content="  Cars101.com " />
+  <meta property="og:description"  content="  Subaru research and information website " />
 
 
 </head>
@@ -55,13 +55,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
-         <p class="details-author">by Larry Owens</p>
-          <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Cars101.com</h1>
+         <p class="details-author">by Joe Spitz</p>
+          <a href="http://www.cars101.com" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/howtokeepyoursubaruAlive.png">
-          <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
+            <img  src="/static/img/guides/subaru-history.jpg">
+          <p>Resource for information on stock subarus. Joe has assembled a massive website of random stuff about all models, keyless entry, nav systems, service intervals etc. </p><p>Research Subaru prices, specifications, colors, rebates, options, photographs, magazine reviews and more.</p><em>submitted by Michael Anderson</em>
         </div>
     </section>
 
