--- a/list.html
+++ b/list.html
@@ -65,6 +65,14 @@
         <th>Archive</th>
       </tr>
       <tr>
+        <td>Bumper Cutting</td>
+        <td>
+        Joshua Carrion
+      </td>
+        <td> <a href="https://m.imgur.com/a/k516H" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
+      </tr>
+      <tr>
         <td>Safe Recovery Technique</td>
         <td>
         
@@ -89,6 +97,14 @@
       </td>
         <td> <a href="https://americanadventurist.com/forum/threads/subaru-forester-rear-front-bumper-build-pics.3788/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/subaru-forester-rear-front-bumper-build-pics.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Cars101.com</td>
+        <td>
+        Joe Spitz
+      </td>
+        <td> <a href="http://www.cars101.com" class="btn grey-background">Link</a>  </td>
+        <td>  </td>
       </tr>
       <tr>
         <td>VIDEO: How-To Tune a CB Antennae</td>
@@ -159,14 +175,6 @@
         <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>DIY Head Porting</td>
-        <td>
-        Tech Staff
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>Ignition Module Testing</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -175,6 +183,14 @@
       </td>
         <td> <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/pdf/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>DIY Head Porting</td>
+        <td>
+        Tech Staff
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>How To Keep Your Subaru Alive</td>
@@ -241,7 +257,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.11.18-43.43</p>
+      <p >v1-08.12.18-13.37</p>
     </a>
   </footer>
 
