--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
+              <option value="CROSSTREK">CROSSTREK</option>
               <option value="GENERIC BUILD">GENERIC BUILD</option>
               <option value="EA82">EA82</option>
               <option value="EJ22">EJ22</option>
@@ -82,7 +83,21 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-id="0" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
+
+              <div class="card">
+                <div class="card-id">Crosstrek</div>
+                <div class="card-author">Joshua Carrion</div>
+                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
+                <div class="card-title">Bumper Cutting</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -96,7 +111,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="1" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -110,7 +125,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY: Swing Away Bumper">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -124,7 +139,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-id="4" data-category="generic build" data-description="Subaru research and information website" data-title="Cars101.com">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Joe Spitz</div>
+                <a href="./detail-page/cars101-com.html"> <div class="item-content">
+                <div class="card-title">Cars101.com</div>
+                <div class="card-description">Subaru research and information website</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-id="5" data-category="generic build" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -138,7 +167,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="6" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -152,7 +181,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="5" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
+          <div style="background-image: url('/static/img/guides/InstrumentClustersAnalog.jpg');" class="item h2 w4" data-id="7" data-category="ea82" data-description="&amp; LED retrofitting" data-title="Dashboard Removal">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -166,7 +195,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
+          <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-id="8" data-category="ea82" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -180,7 +209,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="9" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -194,7 +223,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="8" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="10" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
                 <div class="card-id">ej22</div>
@@ -208,7 +237,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="9" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="11" data-category="generic build" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -222,21 +251,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY Head Porting">
-
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Tech Staff</div>
-                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
-                <div class="card-title">DIY Head Porting</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -250,7 +265,21 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="12" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY Head Porting">
+
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Tech Staff</div>
+                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
+                <div class="card-title">DIY Head Porting</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="14" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -264,7 +293,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="13" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -278,7 +307,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="14" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="16" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -292,7 +321,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="15" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="17" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -306,7 +335,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="16" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="18" data-category="generic build" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -320,7 +349,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -349,7 +378,7 @@
       <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the Video Content, which is provided as is, and without warranties.</p>
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.11.18-43.43</p>
+      <p >v1-08.12.18-13.37</p>
     </a>
   </footer>
 
